--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -18,3 +18,8 @@ COMPONENTS
 LAYOUT
 ==================================================*/
 @import 'layout/header';
+
+/*==================================================
+PAGES
+==================================================*/
+@import 'pages/home';
