--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,11 +37,18 @@ body {
 
 .heading-primary {
   font-size: 6.5rem;
+  font-weight: 700;
   text-transform: uppercase; }
   .heading-primary--1 {
     display: block; }
   .heading-primary--2 {
     display: block; }
+
+.heading-secondary {
+  font-size: 6.8rem;
+  text-transform: uppercase;
+  text-align: center;
+  color: #fc393a; }
 
 /*==================================================
 COMPONENTS
@@ -84,3 +91,30 @@ LAYOUT
     letter-spacing: 1px;
     text-align: center;
     width: 100%; }
+  .header__order-box {
+    position: absolute;
+    top: 1rem;
+    right: 0;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+    padding-right: 3rem; }
+  .header__order-link {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700; }
+  .header__order-arrow {
+    display: inline-block;
+    color: #fff;
+    margin-left: 2rem;
+    font-size: 3rem; }
+
+/*==================================================
+PAGES
+==================================================*/
+.section-menu {
+  background-color: #d6c6ac; }
