--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -48,4 +48,31 @@
     text-align: center;
     width: 100%;
   }
+
+  &__order-box {
+    position: absolute;
+    top: 1rem;
+    right: 0;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    padding-left: 2rem;
+    padding-right: 3rem;
+  }
+
+  &__order-link {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700;
+  }
+
+  &__order-arrow {
+    display: inline-block;
+    color: #fff;
+    margin-left: 2rem;
+    font-size: 3rem;
+  }
 }
