--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -17,3 +17,9 @@
   text-align: center;
   color: $color-red-1;
 }
+
+.first-number {
+  font-size: 6rem;
+  align-self: start;
+  margin-top: -1.8rem;
+}
