--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,10 +9,12 @@ BASE
 ==================================================*/
 @import 'base/base';
 @import 'base/typography';
-
+@import 'base/utilities';
 /*==================================================
 COMPONENTS
 ==================================================*/
+@import 'components/menu';
+@import 'components/location';
 
 /*==================================================
 LAYOUT
