--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,4 +1,27 @@
 .section-menu {
-  padding: 60rem 0;
-  background-color: $color-brown-light-1;
+  padding: 10rem 0;
+  padding-bottom: 5rem;
+  background-color: $color-light-1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 45% 100%, 45% 70%, 0 70%);
+}
+
+.section-locations {
+  position: relative;
+  margin-top: -35rem;
+
+  h2 {
+    text-align: left;
+    margin-left: 20%;
+  }
+}
+
+.section-restaurant {
+  background-image: linear-gradient(rgba(red, 0.5), rgba(red, 0.5)),
+    url('/assets/img/restaurant.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 70rem;
 }
