--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -15,6 +15,7 @@ COMPONENTS
 ==================================================*/
 @import 'components/menu';
 @import 'components/location';
+@import 'components/introduction';
 
 /*==================================================
 LAYOUT
