--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -19,8 +19,9 @@
 }
 
 .section-restaurant {
+  margin-top: 12rem;
   background-image: linear-gradient(rgba(red, 0.5), rgba(red, 0.5)),
-    url('/assets/img/restaurant.jpg');
+    url('/assets/img/banner.jpg');
   background-size: cover;
   background-position: center;
   height: 70rem;
