--- a/assets/sass/components/_introduction.scss
+++ b/assets/sass/components/_introduction.scss
@@ -22,6 +22,9 @@
 
   &__image-box--2 {
     flex: 0 0 50%;
+    filter: grayscale(90%);
+    z-index: -1;
+    position: relative;
   }
 
   &__image {
@@ -56,5 +59,79 @@
   &__story--sub {
     font-size: 1.2rem;
     font-weight: 300;
+  }
+
+  &__statistics {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+
+  &__stat {
+    font-size: 2.6rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-right: 9rem;
+    position: relative;
+  }
+
+  &__year::before {
+    content: "'77";
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -10rem;
+    transform: translateX(-50%);
+    color: $color-red-1;
+    font-size: 12rem;
+    z-index: -1;
+  }
+
+  &__locations::before {
+    content: '6';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -10rem;
+    transform: translateX(-50%);
+    color: $color-red-1;
+    font-size: 12rem;
+    z-index: -1;
+  }
+
+  &__bellies::before {
+    content: '85k';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -10rem;
+    transform: translateX(-50%);
+    color: $color-red-1;
+    font-size: 12rem;
+    z-index: 2;
+  }
+
+  &__bellies::before {
+    content: '85k';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -10rem;
+    transform: translateX(-50%);
+    color: $color-red-1;
+    font-size: 12rem;
+    z-index: -1;
+  }
+
+  &__salads::before {
+    content: '0';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: -10rem;
+    transform: translateX(-50%);
+    color: $color-red-1;
+    font-size: 12rem;
+    z-index: -1;
   }
 }
